--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "main": "build/cact.js",
   "author": "rainke",
   "license": "MIT",
+  "scripts": {
+    "dev": "rollup -c",
+    "main": "rollup -c --environment TARGET:main"
+  },
   "dependencies": {
     "typescript": "^3.1.6"
+  },
+  "devDependencies": {
+    "rollup": "^0.67.1",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-typescript": "^1.0.0",
+    "tslib": "^1.9.3"
   }
 }
